arrange blocks for mobile and desktop version

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body class="body">
     <div class="page">
+      <!-- header начало -->
       <header class="header">
         <div class="header__logo"></div>
         <div class="header__event-date">
@@ -34,9 +35,12 @@
           <div class="header__route"></div>
         </div>
       </header>
+      <!-- header конец -->
+
       <main class="content">
         <section class="cards">
-          <a class="card" href="#" target="_blank">
+          <!-- card начало -->
+          <a class="card card_desktop-element" href="#" target="_blank">
             <p class="card__type">статья</p>
             <h2 class="card__title">Всё о главной гонки России</h2>
             <img
@@ -45,16 +49,25 @@
               alt="фото гонщика"
             />
           </a>
-          <a class="card" href="#" target="_blank">
+          <a class="card card_mobile-element" href="#" target="_blank">
+            <p class="card__type">лонгрид</p>
+            <h2 class="card__title">Команда Шёлкового пути</h2>
+            <img
+              class="card__image"
+              src="images/card-moto-racer.jpg"
+              alt="фото гонщика"
+            />
+          </a>
+          <a class="card card_desktop-element" href="#" target="_blank">
             <p class="card__type">фотографии</p>
             <h2 class="card__title">Топливо и питание: чем заправляются</h2>
             <img
               class="card__image"
               src="images/card-car.jpg"
-              alt="фото гонщика"
+              alt="фото машины"
             />
           </a>
-          <a class="card" href="#" target="_blank">
+          <a class="card card_desktop-element" href="#" target="_blank">
             <p class="card__type">статья</p>
             <h2 class="card__title">
               Ралли «Шёлковый путь». Что не видно зрителям?
@@ -62,59 +75,146 @@
             <img
               class="card__image"
               src="images/card-moto.jpg"
-              alt="фото гонщика"
+              alt="фото гонщика на квадроцикле"
             />
           </a>
-          <a class="card" href="#" target="_blank">
+          <a class="card card_desktop-element" href="#" target="_blank">
             <p class="card__type">лонгрид</p>
             <h2 class="card__title">Техподдержка: про масло и не только</h2>
             <img
               class="card__image"
               src="images/card-buggy.jpg"
-              alt="фото гонщика"
+              alt="фото багги"
             />
           </a>
+
           <nav class="card">
             <p class="card__type">новости</p>
             <div class="card__news-elements">
-              <a class="card__news-element" href="#" target="_blank">
+              <a
+                class="card__news-element card_desktop-element"
+                href="#"
+                target="_blank"
+              >
                 <div class="card__key-icon"></div>
                 <h3 class="card__venue">
                   <span class="card__venue-bold">Подготовка к гонке</span>
                   встречаемся в Москве
                 </h3>
               </a>
-              <a class="card__news-element" href="#" target="_blank">
+              <a
+                class="card__news-element card_desktop-element"
+                href="#"
+                target="_blank"
+              >
                 <div class="card__clock-icon"></div>
                 <h3 class="card__venue">
                   <span class="card__venue-bold">Жизнь на бивуаке: </span>
                   фото и рассказы
                 </h3>
               </a>
-              <a class="card__news-element" href="#" target="_blank">
+              <a
+                class="card__news-element card_desktop-element"
+                href="#"
+                target="_blank"
+              >
                 <div class="card__car-icon"></div>
                 <h3 class="card__venue">
                   <span class="card__venue-bold">Ход гонки: </span>
                   что происходит на маршруте
                 </h3>
               </a>
-              <a class="card__news-element" href="#" target="_blank">
+              <a
+                class="card__news-element card_desktop-element"
+                href="#"
+                target="_blank"
+              >
                 <div class="card__canister-icon"></div>
                 <h3 class="card__venue">
                   <span class="card__venue-bold">Старт гонки: </span>
                   команды, атмосфера и настрой
                 </h3>
               </a>
-              <a class="card__news-element" href="#" target="_blank">
+              <a
+                class="card__news-element card_desktop-element"
+                href="#"
+                target="_blank"
+              >
                 <div class="card__flag-icon"></div>
                 <h3 class="card__venue">
                   <span class="card__venue-bold">Старт гонки: </span>
                   команды, атмосфера и настрой
                 </h3>
               </a>
+
+              <a
+                class="card__news-element card_mobile-element"
+                href="#"
+                target="_blank"
+              >
+                <div class="card__grey-icon"></div>
+                <h3 class="card__venue">
+                  <span class="card__venue-bold">Финиш ралли: </span>
+                  встречаемся в Москве
+                </h3>
+              </a>
+              <a
+                class="card__news-element card_mobile-element"
+                href="#"
+                target="_blank"
+              >
+                <div class="card__grey-icon"></div>
+                <h3 class="card__venue">
+                  <span class="card__venue-bold">Жизнь на бивуаке: </span>
+                  фото и рассказы
+                </h3>
+              </a>
+              <a
+                class="card__news-element card_mobile-element"
+                href="#"
+                target="_blank"
+              >
+                <div class="card__grey-icon"></div>
+                <h3 class="card__venue">
+                  <span class="card__venue-bold">Ход гонки: </span>
+                  что происходит на маршруте
+                </h3>
+              </a>
+              <a
+                class="card__news-element card_mobile-element"
+                href="#"
+                target="_blank"
+              >
+                <div class="card__grey-icon"></div>
+                <h3 class="card__venue">
+                  <span class="card__venue-bold">Старт гонки:</span>
+                  команды, атмосфера и настрой
+                </h3>
+              </a>
             </div>
           </nav>
-          <a class="card" href="#" target="_blank">
+
+          <a class="card card_mobile-element" href="#" target="_blank">
+            <p class="card__type">фотографии</p>
+            <h2 class="card__title">Гонщики и амбассадоры: кто они</h2>
+            <img
+              class="card__image"
+              src="images/card-moto.jpg"
+              alt="фото гонщика на квадроцикле"
+            />
+          </a>
+
+          <a class="card card_mobile-element" href="#" target="_blank">
+            <p class="card__type">лонгрид</p>
+            <h2 class="card__title">Техподдержка: про масло и не только</h2>
+            <img
+              class="card__image"
+              src="images/card-buggy.jpg"
+              alt="фото багги"
+            />
+          </a>
+
+          <a class="card card_desktop-element" href="#" target="_blank">
             <p class="card__type">квиз</p>
             <h2 class="card__title">Квиз по Шёлковому пути: проверка</h2>
             <img
@@ -124,7 +224,10 @@
             />
           </a>
         </section>
+        <!-- card конец -->
       </main>
+
+      <!-- footer начало -->
       <footer class="footer">
         <div class="footer__sponsors-logo">
           <div class="footer__gazpromneft-logo"></div>
@@ -133,6 +236,7 @@
         </div>
         <p class="footer__copyright">2022, VK, Все права защищены</p>
       </footer>
+      <!-- footer конец -->
     </div>
   </body>
 </html>
