--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div class="page">
       <!-- header начало -->
       <header class="header">
+        <div class="header__car-background"></div>
         <div class="header__logo"></div>
         <div class="header__event-date">
           <div class="header__decorative-element"></div>
           <div class="header__start-date">
-            <div class="header__date"></div>
+            <div class="header__dates"></div>
             <div class="header__month"></div>
           </div>
           <div class="header__event-logo"></div>
@@ -40,7 +41,7 @@
       <main class="content">
         <section class="cards">
           <!-- card начало -->
-          <a class="card card_desktop-element" href="#" target="_blank">
+          <a class="card card_desktop-version" href="#" target="_blank">
             <p class="card__type">статья</p>
             <h2 class="card__title">Всё о главной гонки России</h2>
             <img
@@ -49,7 +50,7 @@
               alt="фото гонщика"
             />
           </a>
-          <a class="card card_mobile-element" href="#" target="_blank">
+          <a class="card card_mobile-version" href="#" target="_blank">
             <p class="card__type">лонгрид</p>
             <h2 class="card__title">Команда Шёлкового пути</h2>
             <img
@@ -58,7 +59,7 @@
               alt="фото гонщика"
             />
           </a>
-          <a class="card card_desktop-element" href="#" target="_blank">
+          <a class="card card_desktop-version" href="#" target="_blank">
             <p class="card__type">фотографии</p>
             <h2 class="card__title">Топливо и питание: чем заправляются</h2>
             <img
@@ -67,7 +68,7 @@
               alt="фото машины"
             />
           </a>
-          <a class="card card_desktop-element" href="#" target="_blank">
+          <a class="card card_desktop-version" href="#" target="_blank">
             <p class="card__type">статья</p>
             <h2 class="card__title">
               Ралли «Шёлковый путь». Что не видно зрителям?
@@ -78,7 +79,7 @@
               alt="фото гонщика на квадроцикле"
             />
           </a>
-          <a class="card card_desktop-element" href="#" target="_blank">
+          <a class="card card_desktop-version" href="#" target="_blank">
             <p class="card__type">лонгрид</p>
             <h2 class="card__title">Техподдержка: про масло и не только</h2>
             <img
@@ -92,7 +93,7 @@
             <p class="card__type">новости</p>
             <div class="card__news-elements">
               <a
-                class="card__news-element card_desktop-element"
+                class="card__news-element card_desktop-version"
                 href="#"
                 target="_blank"
               >
@@ -103,7 +104,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_desktop-element"
+                class="card__news-element card_desktop-version"
                 href="#"
                 target="_blank"
               >
@@ -114,7 +115,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_desktop-element"
+                class="card__news-element card_desktop-version"
                 href="#"
                 target="_blank"
               >
@@ -125,7 +126,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_desktop-element"
+                class="card__news-element card_desktop-version"
                 href="#"
                 target="_blank"
               >
@@ -136,7 +137,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_desktop-element"
+                class="card__news-element card_desktop-version"
                 href="#"
                 target="_blank"
               >
@@ -148,7 +149,7 @@
               </a>
 
               <a
-                class="card__news-element card_mobile-element"
+                class="card__news-element card_mobile-version"
                 href="#"
                 target="_blank"
               >
@@ -159,7 +160,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_mobile-element"
+                class="card__news-element card_mobile-version"
                 href="#"
                 target="_blank"
               >
@@ -170,7 +171,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_mobile-element"
+                class="card__news-element card_mobile-version"
                 href="#"
                 target="_blank"
               >
@@ -181,7 +182,7 @@
                 </h3>
               </a>
               <a
-                class="card__news-element card_mobile-element"
+                class="card__news-element card_mobile-version"
                 href="#"
                 target="_blank"
               >
@@ -194,7 +195,7 @@
             </div>
           </nav>
 
-          <a class="card card_mobile-element" href="#" target="_blank">
+          <a class="card card_mobile-version" href="#" target="_blank">
             <p class="card__type">фотографии</p>
             <h2 class="card__title">Гонщики и амбассадоры: кто они</h2>
             <img
@@ -204,7 +205,7 @@
             />
           </a>
 
-          <a class="card card_mobile-element" href="#" target="_blank">
+          <a class="card card_mobile-version" href="#" target="_blank">
             <p class="card__type">лонгрид</p>
             <h2 class="card__title">Техподдержка: про масло и не только</h2>
             <img
@@ -214,7 +215,7 @@
             />
           </a>
 
-          <a class="card card_desktop-element" href="#" target="_blank">
+          <a class="card card_desktop-version" href="#" target="_blank">
             <p class="card__type">квиз</p>
             <h2 class="card__title">Квиз по Шёлковому пути: проверка</h2>
             <img
