--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,7 +12,11 @@
       <!-- header начало -->
       <header class="header">
         <div class="header__car-background"></div>
-        <div class="header__logo"></div>
+        <img
+          class="header__logo"
+          src="images/header-logo.svg"
+          alt="Логотип Silk Way"
+        />
         <div class="header__event-date">
           <div class="header__decorative-element"></div>
           <div class="header__start-date">
@@ -231,9 +235,26 @@
       <!-- footer начало -->
       <footer class="footer">
         <div class="footer__sponsors-logo">
-          <div class="footer__gazpromneft-logo"></div>
-          <div class="footer__g-drive-logo"></div>
-          <div class="footer__g-energy-logo"></div>
+          <img
+            class="footer__gazpromneft-logo"
+            src="images/footer-gazpromneft-logo.svg"
+            alt="Логотип Газпромнефть"
+          />
+          <!-- <div class="footer__gazpromneft-logo"></div> -->
+
+          <img
+            class="footer__g-drive-logo"
+            src="images/footer-g-drive-logo.svg"
+            alt="Логотип G-Drive"
+          />
+          <!-- <div class="footer__g-drive-logo"></div> -->
+
+          <img
+            class="footer__g-energy-logo"
+            src="images/footer-g-energy-logo.svg"
+            alt="Логотип G-Energy"
+          />
+          <!-- <div class="footer__g-energy-logo"></div> -->
         </div>
         <p class="footer__copyright">2022, VK, Все права защищены</p>
       </footer>
