--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header__car-background"></div>
         <img
           class="header__logo"
-          src="images/header-logo.svg"
+          src="images/logo.png"
           alt="Логотип Silk Way"
         />
         <div class="header__event-date">
@@ -236,17 +236,17 @@
         <div class="footer__sponsors-logo">
           <img
             class="footer__gazpromneft-logo"
-            src="images/footer-gazpromneft-logo.svg"
+            src="images/logo.png"
             alt="Логотип Газпромнефть"
           />
           <img
             class="footer__g-drive-logo"
-            src="images/footer-g-drive-logo.svg"
+            src="images/logo.png"
             alt="Логотип G-Drive"
           />
           <img
             class="footer__g-energy-logo"
-            src="images/footer-g-energy-logo.svg"
+            src="images/logo.png"
             alt="Логотип G-Energy"
           />
         </div>
